--- a/museum/style/style.css
+++ b/museum/style/style.css
@@ -471,7 +471,7 @@ header {
   padding: 26px 0 76px 0;
 }
 
-.wrapper .wrapper-container .louvre-container .louvre-button {
+.wrapper .wrapper-container .louvre-container form .louvre-button {
   width: 360px;
   height: 75px;
   font-family: 'Roboto Thin';
@@ -491,13 +491,10 @@ header {
   border-radius: 10px;
   -webkit-transition: 0.5s;
   transition: 0.5s;
-}
-
-.wrapper .wrapper-container .louvre-container .louvre-button a {
   color: #FFFFFF;
 }
 
-.wrapper .wrapper-container .louvre-container .louvre-button:hover {
+.wrapper .wrapper-container .louvre-container form .louvre-button:hover {
   background: #9D8665;
 }
 
@@ -788,6 +785,11 @@ header {
   padding-bottom: 40px;
 }
 
+.vidio-container video {
+  width: 100%;
+  height: 100%;
+}
+
 .vidio-container .video-start {
   position: absolute;
   left: 42.5%;
@@ -946,6 +948,11 @@ header {
 
 .video-slide {
   height: 254px;
+}
+
+.video-slide iframe {
+  width: 100%;
+  height: 100%;
 }
 
 .swiper-horizontal > .swiper-pagination-bullets .swiper-pagination-bullet, .swiper-pagination-horizontal.swiper-pagination-bullets .swiper-pagination-bullet {
@@ -1378,6 +1385,7 @@ header {
   right: 30px;
   width: 25px;
   height: 25px;
+  cursor: pointer;
 }
 
 .close img {
